testdata/baselines/reference/submodule/conformance/varRequireFromTypescript.errors.txt
use.js(13,12): error TS7006: Parameter 'greatest' implicitly has an 'any' type.
use.js(13,22): error TS7006: Parameter 'wrap' implicitly has an 'any' type.


==== use.js (2 errors) ====
    var ex = require('./ex')
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Greatest} greatest
     * @param {ex.Crunch} wrap
     */
    function f(greatest, wrap) {
               ~~~~~~~~
!!! error TS7006: Parameter 'greatest' implicitly has an 'any' type.
                         ~~~~
!!! error TS7006: Parameter 'wrap' implicitly has an 'any' type.
        greatest.day
        wrap.n
    }
    
==== ex.d.ts (0 errors) ====
    export type Greatest = { day: 1 }
    export class Crunch {
        n: number
        m(): number
        constructor(n: number)
    }
    